<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rounded_corner"
    android:padding="10dp"
    android:layout_marginBottom="20dp">

    <TextView
        android:id="@+id/txt_work_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="32sp"
        android:gravity="center"
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/hint_txt"/>

    <TextView
        android:id="@+id/txt_work_update_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:gravity="center"
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/hint_update_time"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow>

                <ImageView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_calendar"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:clickable="false"
                    android:focusable="false"
                    android:layout_margin="5dp"/>

                <TextView
                    android:id="@+id/txt_work_calendar"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="24sp"
                    android:gravity="center_vertical"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/hint_target_date_work"
                    android:paddingStart="10dp"/>
            </TableRow>

            <TableRow>

                <ImageView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_time"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:clickable="false"
                    android:focusable="false"
                    android:layout_margin="5dp"/>

                <TextView
                    android:id="@+id/txt_work_time"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="24sp"
                    android:gravity="center_vertical"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/hint_target_time_work"
                    android:paddingStart="10dp"/>
            </TableRow>

        </TableLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_enable_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:padding="10dp"
            android:text="@string/txt_remind_me"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/btn_delete_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="5dp"
        android:src="@drawable/ic_delete" />

</LinearLayout>